--- a/Weitianshi/pages/Template/Template.wxml
+++ b/Weitianshi/pages/Template/Template.wxml
@@ -1101,9 +1101,10 @@
         <view class="investName flex">
           <view class="investName1">{{item.project_name}}</view>
           <view class="investHot" wx:if="{{item.is_hot==1}}">Hot</view>
-          <block wx:for="{{item.style_list}}" wx:key="{{item.style_list}}">
-            <view class="investWheel investInduryone">{{item.style_name}}</view>
-          </block>
+          <!-- <block wx:for="{{item.style_list}}" wx:key="{{item.style_list}}"> -->
+            <view class="investWheel investInduryone">多轮陪伴</view>
+            <!--{{item.style_name}}  -->
+          <!-- </block> -->
 
         </view>
         <view class="investIndury">
@@ -1122,8 +1123,17 @@
         <view class="investDetail">
           <block wx:for="{{item.investment_list}}" wx:key="{{index}}" wx:for-item="investList">
             <!-- <view class="investInduryone" >{{item.investment_name}}、</view> -->
-            <view class="investInduryone" wx:if="{{index <  item.investment_list.length-1}}">{{investList.investment_name}}、</view>
-            <view class="investInduryone" wx:if="{{index == item.investment_list.length-1}}">{{investList.investment_name}}</view>
+            <view class="investInduryone" wx:if="{{index <  item.investment_list.length-1}}">
+            <label> {{investList.investment_name}}</label>
+            <label wx:if="{{investList.is_lead==0}}">【跟投】</label>
+            <label wx:if="{{investList.is_lead==1}}">【领投】</label>
+            <label>、</label>
+           </view>
+            <view class="investInduryone" wx:if="{{index == item.investment_list.length-1}}">
+           <label> {{investList.investment_name}}</label>
+            <label wx:if="{{investList.is_lead==0}}">【跟投】</label>
+            <label wx:if="{{investList.is_lead==1}}">【领投】</label>
+            </view>
           </block>
         </view>
       </view>
@@ -1185,14 +1195,16 @@
 <!--媒体新闻  -->
 <template name="media">
   <view id="mediaNew" class="inMedia ">
-    <view class="mediaTime flex">{{item.time}}</view>
+    <view class="mediaTime flex">{{item.news_date}}</view>
     <view class="mediaTitle">
-      {{item.content}}
+      {{item.news_title}}
     </view>
     <view class=" mediaType flex">
+    <view wx:if="{{item.industry_name}}">
       <view class="mediaTypeRight">{{item.industry_name}}</view>
       <view class="mediaTypeRight">|</view>
-      <view>{{item.ori_url}}</view>
+      </view>
+      <view class="newUrl">{{item.news_url}}</view>
     </view>
     <!-- <view class="mediaLine"></view> -->
   </view>
@@ -1229,8 +1241,8 @@
 
     <view class="memberInfo flex">
       <view class="memberInfoLeft">
-        <!-- <image src="{{item.member_avatar_url}}" wx:if="{{item.member_avatar_url}}"></image> -->
-        <!-- <view class="memberInfoLeft" wx:if="{{item.member_avatar_text}}">{{item.member_avatar_text}}</view> -->
+        <image src="{{item.member_avatar_url}}" wx:if="{{item.member_avatar_url}}"></image>
+          <view class="memberInfoLeft" wx:if="{{item.member_avatar_text}}">{{item.member_avatar_text}}</view>  
       </view>
       <view class="memberInfoRight">
         <view class="flex memberInfoTop">
@@ -1261,8 +1273,8 @@
     <view class="investGroupBlock flex" bindtap="institutionalDetails1" data-id="{{item.investment_id}}">
       <view class="invest1Left">
         <view class="investGroupLeft">
-          <!-- <image src="{{item.investment_logo}}" class="investGroupLeft" wx:if="{{item.investment_logo}}"></image> -->
-          <!-- <image src="/img/warband-logo.png" class="investGroupLeft"></image> -->
+           <image src="{{item.investment_logo}}" class="investGroupLeft" wx:if="{{item.investment_logo}}"></image>
+           <image src="/img/warband-logo.png" class="investGroupLeft"></image> 
         </view>
         <view class="match1">匹配度</view>
         <view class="match">{{item.match_rate}}%</view>
@@ -1270,11 +1282,11 @@
       <view class="investGroupRight">
         <view class="flex investTitleBlock">
           <view class="investTitle">{{item.investment_name}}</view>
-          <view class="investNum">
+          <view class="investNum" wx:if="{{item.investment_event_count}}">
             <label>{{item.investment_event_count}}</label>个投资案例</view>
         </view>
         <view class="investIntro">{{item.investment_introduce}}</view>
-        <view class="flex">
+        <view class="flex" wx:if="{{item.industry_list.length!=0}}">
           <label class="mainCase">主投</label>
           <view class="mainCaseContent">
             <block wx:for="{{item.industry_list}}" wx:key="{{index}}" wx:if="{{item.industry_list.length != 0}}" wx:for-item="industryList">
@@ -1283,7 +1295,7 @@
             </block>
           </view>
         </view>
-        <view class="flex">
+        <view class="flex" wx:if="{{item.style_list.length!=0}}">
           <label class="tapCase">标签</label>
           <view class="mainCaseContent">
             <block wx:for="{{item.style_list}}" wx:key="{{index}}" wx:if="{{item.style_list.length != 0}}" wx:for-item="styleList">
@@ -1292,11 +1304,13 @@
             </block>
           </view>
         </view>
+        <view wx:if="{{item.investment_events.length != 0}}">
         <view class="projectListBlock">
-          <block wx:for="{{item.investment_events}}" wx:key="{{index}}" wx:if="{{item.investment_events.length != 0}}" wx:for-item="eventList">
+          <block wx:for="{{item.investment_events}}" wx:key="{{index}}"  wx:for-item="eventList">
             <label wx:if="{{index < item.investment_events.length-1}}">{{eventList.event_time}}【{{eventList.project_name}}】、</label>
             <label wx:if="{{index == item.investment_events.length-1}}">{{eventList.event_time}}【{{eventList.project_name}}】</label>
           </block>
+        </view>
         </view>
       </view>
     </view>
