--- a/Weitianshi/pages/organization/subPage/project_orgMatch/project_orgMatch.wxml
+++ b/Weitianshi/pages/organization/subPage/project_orgMatch/project_orgMatch.wxml
@@ -1,7 +1,7 @@
 <!--pages/organization/subPage/list_orgMember/list_orgMember.wxml-->
 <!--pages/organization/subPage/list_media/list_media.wxml-->
 <import src="/pages/Template/Template.wxml" />
-<scroll-view style='heigt:3000rpx;' scroll-y='true' bindscrolltolower='loadMore'>
+<scroll-view style='heigt:3000rpx;' scroll-y='true' scroll-top="{{scroll}}" bindscrolltolower='loadMore'>
 
   <view class="media12">
     <view class="matchIntro">{{newPage.pro_intro}}</view>
