--- a/Weitianshi/utils/wxss/organization.wxss
+++ b/Weitianshi/utils/wxss/organization.wxss
@@ -1,4 +1,5 @@
 /*投资案例样式  */
+
 #invest {
   /* padding: 42rpx 32rpx -2rpx 32rpx;  */
   padding-top: 42rpx;
@@ -83,6 +84,7 @@
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   margin-bottom: 24rpx;
+  width: 105%
 }
 
 #invest .investInduryone {
@@ -283,8 +285,14 @@
   background: #f0f0f0;
   width: 104rpx;
   height: 104rpx;
-  border-radius: 100%;
+  border-radius: 50%;
   margin-right: 24rpx;
+}
+
+#memberList .memberInfoLeft image {
+  width: 104rpx;
+  height: 104rpx;
+  border-radius: 50%;
 }
 
 #memberList .memberInfoTop {
@@ -323,7 +331,7 @@
   background: #fafafa;
   border-radius: 4rpx;
   width: 510rpx;
-  height: 64rpx;
+  /* height: 64rpx; */
   font-size: 24rpx;
   color: #999;
   line-height: 32rpx;
@@ -357,6 +365,13 @@
 
 #mediaNew:last-child {
   border-bottom: 0;
+}
+
+#mediaNew .newUrl {
+  width: 100%;
+  overflow: hidden; /*超出部分隐藏*/
+  white-space: nowrap; /*不换行*/
+  text-overflow: ellipsis; /*超出部分文字以...显示*/
 }
 
 #mediaNew .mediaTime {
@@ -401,8 +416,9 @@
   background: #fff;
   padding: 32rpx;
 }
-#memberList1{
-   /* padding: 42rpx 32rpx -2rpx 32rpx;  */
+
+#memberList1 {
+  /* padding: 42rpx 32rpx -2rpx 32rpx;  */
   padding-top: 42rpx;
   /* padding-left: 32rpx;
   padding-right: 32rpx; */
@@ -410,6 +426,7 @@
   margin: 0 auto;
   width: 92%;
 }
+
 #memberList1:last-child {
   border-bottom: 0;
 }
@@ -420,6 +437,12 @@
 
 #memberList1 .memberInfoRight {
   width: 80%;
+}
+
+#memberList1 .memberInfoLeft image {
+  width: 104rpx;
+  height: 104rpx;
+  border-radius: 50%;
 }
 
 #memberList1  .swiper-box .blockTitle {
@@ -519,8 +542,7 @@
   background: #fafafa;
   border-radius: 4rpx;
   width: 88%;
-  /* margin: 0 auto; */
-  height: 64rpx;
+  /* margin: 0 auto; *//* height: 64rpx; */
   font-size: 24rpx;
   color: #999;
   line-height: 32rpx;
