--- a/Weitianshi/pages/Template/Template.wxml
+++ b/Weitianshi/pages/Template/Template.wxml
@@ -883,15 +883,15 @@
       <view class='flex dropFlex'>
         <block wx:for='{{SearchInit.tab}}' wx:key='{{item.label}}'>
           <template is='searchDropItem' data='{{SearchInit,item,label:item.label,itemId:item.itemId,itemName:item.itemName,longCheckBox:item.longCheckBox,index}}'></template>
-        </block>
-      </view>
-      <!--重置确定  -->
-      <view class='btnGroup flex' wx:if="{{SearchInit.currentIndex!=5}}">
-        <button bindtap='reset'>重置</button>
-        <button bindtap='searchCertain'>确定</button>
-      </view>
-    </view>
-  </view>
+</block>
+</view>
+<!--重置确定  -->
+<view class='btnGroup flex' wx:if="{{SearchInit.currentIndex!=5}}">
+  <button bindtap='reset'>重置</button>
+  <button bindtap='searchCertain'>确定</button>
+</view>
+</view>
+</view>
 </template>
 
 <!--筛选下拉框(单个)  -->
@@ -909,13 +909,13 @@
     <scroll-view class='scroll flex' scroll-x='true'>
       <view class='flex'>
         <template is='searchResult_single' data='{{SearchInit,type:"industry",typeName:"industry_name",typeId:"industry_id"}}'></template>
-        <template is='searchResult_single' data='{{SearchInit,type:"stage",typeName:"stage_name",typeId:"stage_id"}}'></template>
-        <template is='searchResult_single' data='{{SearchInit,type:"scale",typeName:"scale_money",typeId:"scale_id"}}'></template>
-        <template is='searchResult_single' data='{{SearchInit,type:"hotCity",typeName:"area_title",typeId:"area_id"}}'></template>
-      </view>
-    </scroll-view>
-    <view class='allReset' bindtap='allReset'>清空</view>
-  </view>
+<template is='searchResult_single' data='{{SearchInit,type:"stage",typeName:"stage_name",typeId:"stage_id"}}'></template>
+<template is='searchResult_single' data='{{SearchInit,type:"scale",typeName:"scale_money",typeId:"scale_id"}}'></template>
+<template is='searchResult_single' data='{{SearchInit,type:"hotCity",typeName:"area_title",typeId:"area_id"}}'></template>
+</view>
+</scroll-view>
+<view class='allReset' bindtap='allReset'>清空</view>
+</view>
 </template>
 
 <!--筛选结果展示横列(单个)  -->
@@ -1130,21 +1130,20 @@
     </view>
     <!-- <view class="mediaLine"></view> -->
   </view>
-
 </template>
 
 <!--投资领域  -->
 <template name="industry">
-  <view id="industry">{{item.industry_name}}</view>
+  <view id="industry" style="display :{{currentTab ==0 && index >= 6?  'none' :'inline-block'}}">{{item.industry_name}}</view>
 </template>
 
 <!--投资机构  -->
 <template name="investment">
-  <block wx:for="{{investment_list.list}}" wx:key="{{index}}">
-    <view class="investGroupBlock flex" bindtap="institutionalDetails" data-id="{{item.investment_id}}">
+  <block wx:for="{{investment_list}}" wx:key="{{index}}">
+    <view class="investGroupBlock flex" bindtap="institutionalDetails" data-id="{{item.investment_id}}" hidden="{{currentTab == 0 && index >= 6}}">
       <view class="investGroupLeft">
-        <!-- <image src="{{item.investment_logo}}" class="investGroupLeft" wx:if="{{item.investment_logo}}"></image> -->
-        <!-- <image src="/img/warband-logo.png" class="investGroupLeft"></image> -->
+        <image src="{{item.investment_logo}}" class="investGroupLeft" wx:if="{{item.investment_logo}}"></image>
+       <image src="/img/warband-logo.png" class="investGroupLeft" wx:if="{{!item.investment_logo}}"></image> 
       </view>
       <view class="investGroupRight">
         <view class="flex investTitleBlock">
@@ -1152,27 +1151,28 @@
           <view class="investNum">
             <label>{{item.investment_event_count}}</label>个投资案例</view>
         </view>
-        <view class="investIntro">{{item.investment_introduce}}</view>
-        <view class="flex">
+        <view class="investIntro" wx:if="{{item.investment_introduce}}">{{item.investment_introduce}}</view>
+       <view class="investIntro" wx:if="{{!item.investment_introduce}}"></view>
+        <view class="flex" wx:if="{{item.industry_list.length != 0}}">
           <label class="mainCase">主投</label>
           <view class="mainCaseContent">
-            <block wx:for="{{item.industry_list}}" wx:key="{{index}}" wx:if="{{item.industry_list.length != 0}}" wx:for-item="industryList">
+            <block wx:for="{{item.industry_list}}" wx:key="{{index}}"  wx:for-item="industryList">
               <label wx:if="{{index <  item.industry_list.length-1}}">{{industryList.industry_name}}、</label>
               <label wx:if="{{index == item.industry_list.length-1}}">{{industryList.industry_name}}</label>
             </block>
           </view>
         </view>
-        <view class="flex">
+        <view class="flex" wx:if="{{item.style_list.length != 0}}">
           <label class="tapCase">标签</label>
           <view class="mainCaseContent">
-            <block wx:for="{{item.style_list}}" wx:key="{{index}}" wx:if="{{item.style_list.length != 0}}" wx:for-item="styleList">
+            <block wx:for="{{item.style_list}}" wx:key="{{index}}"  wx:for-item="styleList">
               <label wx:if="{{index <  item.style_list.length-1}}">{{styleList.style_name}}、</label>
               <label wx:if="{{index == item.style_list.length-1}}">{{styleList.style_name}}</label>
             </block>
           </view>
         </view>
-        <view class="projectListBlock">
-          <block wx:for="{{item.investment_events}}" wx:key="{{index}}" wx:if="{{item.investment_events.length != 0}}" wx:for-item="investment_eventsList">
+        <view class="projectListBlock"  wx:if="{{item.investment_events.length != 0}}">
+          <block wx:for="{{item.investment_events}}" wx:key="{{index}}" wx:for-item="investment_eventsList">
             <label wx:if="{{index < item.investment_events.length-1}}">{{investment_eventsList.event_time}}【{{investment_eventsList.project_name}}】、</label>
             <label wx:if="{{index == item.investment_events.length-1}}">{{investment_eventsList.event_time}}【{{investment_eventsList.project_name}}】</label>
           </block>
@@ -1201,10 +1201,10 @@
 <!--机构成员  -->
 <template name="memberList">
   <block wx:for="{{memberList.list}}" wx:key="{{index}}">
-    <view class="memberInfo flex" data-memberid="{{item.member_id}}" bindtap="findMember">
+    <view class="memberInfo flex" data-memberid="{{item.member_id}}"  hidden="{{currentTab == 0 && index >= 6}}" bindtap="findMember">
       <view class="memberInfoLeft">
-        <!-- <image src="{{item.member_avatar_url}}" wx:if="{{item.member_avatar_url}}"></image> -->
-        <!-- <view class="memberInfoLeft" wx:if="{{item.member_avatar_text}}">{{item.member_avatar_text}}</view> -->
+           <image src="{{item.member_avatar_url}}" wx:if="{{item.member_avatar_url}}"  class="memberInfoLeft"></image> 
+         <view class="memberInfoLeft" wx:if="{{item.member_avatar_text}}">{{item.member_avatar_text}}</view>   
       </view>
       <view class="memberInfoRight">
         <view class="flex memberInfoTop">
