--- a/Weitianshi/pages/oneKeyResearch/oneKeyResearch.wxml
+++ b/Weitianshi/pages/oneKeyResearch/oneKeyResearch.wxml
@@ -1,9 +1,12 @@
 <include src='/utils/wxml/projectDetail' />
-<view class=" flex floatBtn flexBox">
+<view class=" flex floatBtn flexBox" hidden="{{currentTab==1}}">
   <view class="collectBox" bindtap="collectProject">
     <image src="/img/icon-shoucang@2x.png" class="collectPic"></image>
   </view>
   <view class="contactProject" catchtap="contactPerson">联系项目方</view>
   <view class="businessBook" catchtap="businessBook">商业计划书</view>
+</view>
+<view class=" flex floatBtn flexBox jigou" bindtap='toMap' hidden="{{currentTab==0||currentTab==2 }}">
+     机构版买家图谱
 </view>
 
