--- a/Weitianshi/pages/organization/org_detail/org_detail.wxml
+++ b/Weitianshi/pages/organization/org_detail/org_detail.wxml
@@ -13,7 +13,7 @@
         </view>
         <view class="detailName">{{info.investment_name}}</view>
       </view>
-      <view class="mediaLine"></view>
+      <view class="mediaLine" wx:if="{{info.type_list.length!=0||info.style_list.length!=0}}"></view>
       <view class="detailType">
         <block wx:for="{{info.type_list}}" wx:key="{{item}}">
           <view class="detailType1 detailColor detailRight">{{item.type_name}}</view>
@@ -64,7 +64,7 @@
     </view>
   </view>
   <!--投资领域  -->
-  <view class="media1" wx:if="{{info.industry_list}}">
+  <view class="media1" wx:if="{{info.industry_list.length!=0}}">
     <view class="inMedia investBottom">
       <view class="industry investBottom">投资领域</view>
       <view class="detailType">
@@ -82,7 +82,7 @@
     </view>
   </view>
   <!--投资轮次  -->
-  <view class="media1" wx:if="{{info.stage_list}}">
+  <view class="media1" wx:if="{{info.stage_list.length!=0}}">
     <view class="inMedia investBottom">
       <view class="industry investBottom">投资轮次</view>
       <view class="detailType">
@@ -99,14 +99,14 @@
     <view class="inMedia investBottom">
       <view class="industry investBottom flex">基金管理方</view>
       <block wx:for="{{info.manage_fund_list}}" wx:key="{{index}}" wx:if="{{index<2 ||industrialChangeMore == 5}}">
-        <view class="manageCompany">{{item.manage_fund_name}}</view>
+        <view class="manageCompany">{{item.fund_manager_name}}</view>
       </block>
       <label class="more" catchtap="checkMore" wx:if="{{industrialChangeMore!=5&&info.manage_fund_list.length>2 }}" data-id="{{5}}">更多</label>
       <label class="more" catchtap="noCheckMore" wx:if="{{industrialChangeMore==5 }}" data-id="{{5}}">收起</label>
     </view>
   </view>
   <!--投资案例  -->
-  <view class="media1" wx:if="{{investment_events.list}}">
+  <view class="media1" wx:if="{{investment_events.list.length!=0}}">
     <view class="inMedia  flex case1">
       <view class="case ">投资案例</view>
       <view class="caseAll" bindtap="toCase">
@@ -119,7 +119,7 @@
     </block>
   </view>
   <!--媒体新闻  -->
-  <view class="media1" wx:if="{{media_list.list}}">
+  <view class="media1" wx:if="{{media_list1.length!=0}}">
     <view class="inMedia  flex case1">
       <view class="case ">媒体</view>
       <view class="caseAll " bindtap='toMedia'>
@@ -127,12 +127,12 @@
         <view class="caseIn caseLeft">({{media_list.news_total_num}})</view>
       </view>
     </view>
-    <block wx:for="{{media_list.list}}" wx:key="{{media_list.list}}">
+    <block wx:for="{{media_list1}}" wx:key="{{media_list1}}">
       <template is='media' data='{{item}}'></template>
     </block>
   </view>
   <!--在职成员  -->
-  <view class="media1" wx:if="{{memberList}}">
+  <view class="media1" wx:if="{{memberList.length!=0}}">
     <view class="inMedia  flex case1">
       <view class="case ">在职成员</view>
       <view class="caseAll " bindtap='toMember'>
@@ -145,7 +145,7 @@
     </block>
   </view>
   <!--离职成员  -->
-  <view class="media1" wx:if="{{leaveList}}">
+  <view class="media1" wx:if="{{leaveList.length!=0}}">
     <view class="inMedia  flex case1">
       <view class="case ">离职成员</view>
       <view class="caseAll " bindtap='toLeave'>
