--- a/Weitianshi/pages/organization/org_detail/org_detail.wxss
+++ b/Weitianshi/pages/organization/org_detail/org_detail.wxss
@@ -46,6 +46,7 @@ page {
 .detailLogo1 {
   width: 154.44rpx;
   height: 154.44rpx;
+   margin-bottom: 25rpx; 
   /* background: red; */
 }
 
@@ -103,6 +104,7 @@ page {
 
 .investImg image {
   width: 100%;
+  height: 327rpx;
 }
 
 .investBottom {
@@ -163,8 +165,11 @@ page {
   background: rgba(244, 76, 76, 0.10);
   border: 1px solid rgba(244, 76, 76, 0.20);
   border-radius: 2px;
-  display: inline-block;
-  padding: 0 20rpx;
+  /* display: inline-block; */
+  width: fit-content;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  padding: 0 10rpx;
   height: 51.48rpx;
   font-size: 12px;
   color: #f44c4c;
