--- a/Weitianshi/pages/organization/subPage/list_investCase/list_investCase.wxml
+++ b/Weitianshi/pages/organization/subPage/list_investCase/list_investCase.wxml
@@ -1,10 +1,12 @@
 <!--pages/organization/subPage/list_investCase/list_investCase.wxml-->
 <import src="/pages/Template/Template.wxml" />
-
- <scroll-view style='heigt:3000rpx;' scroll-y='true' bindscrolltolower='loadMore'>
-   <view class="investImg">
+<!--筛选和搜索  -->
+<template is='search' data='{{SearchInit,currentTab}}'></template>
+<template is='searchResult' data='{{SearchInit}}'></template>
+<scroll-view style='heigt:3000rpx;' scroll-y='true' bindscrolltolower='loadMore'>
+  <view class="investImg" wx:if="{{newPage.investment_event_url}}">
     <image src="{{newPage.investment_event_url}}"></image>
-  </view>  
+  </view>
   <!--循环投资案例  -->
   <view>
     <view class="media">
@@ -13,8 +15,8 @@
       </block>
     </view>
   </view>
-  
-  <!--错误提示-->
-   <view class="error" wx:if="{{error=='1'}}">{{error_text}}</view>
 
-</scroll-view> 
+  <!--错误提示-->
+  <view class="error" wx:if="{{error=='1'}}">{{error_text}}</view>
+
+</scroll-view>
