--- a/Weitianshi/pages/organization/subPage/list_investCase/list_investCase.wxss
+++ b/Weitianshi/pages/organization/subPage/list_investCase/list_investCase.wxss
@@ -6,14 +6,11 @@ page {
 .investImg {
   width: 100%;
   height: 327.6rpx;
-  /* position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 999; */
 }
 
 .investImg image {
   width: 100%;
+   height: 327.6rpx;
 }
 
 .media {
