--- a/Weitianshi/pages/organization/subPage/list_orgMember/list_orgMember.wxml
+++ b/Weitianshi/pages/organization/subPage/list_orgMember/list_orgMember.wxml
@@ -3,12 +3,13 @@
 <import src="/pages/Template/Template.wxml" />
 <scroll-view style='heigt:3000rpx;' scroll-y='true' bindscrolltolower='loadMore'>
 
-  <view class="media12">
+  <view class="media12" wx:if="{{memberList.length!=0}}">
 
     <block wx:for="{{memberList}}" wx:key="{{memberList}}">
       <template is='memberList1' data='{{item}}'></template>
     </block>
   </view>
+  <view class="hasNothing" wx:if="{{memberList.length ==0 }}">暂无数据</view>
 
 
   <!--错误提示-->
