--- a/Weitianshi/pages/organization/subPage/project_orgMatch/project_orgMatch.wxss
+++ b/Weitianshi/pages/organization/subPage/project_orgMatch/project_orgMatch.wxss
@@ -16,3 +16,11 @@ page {
   color: #333;
   padding-top: 15rpx;
 }
+
+.hasNothing {
+  margin-top: 410rpx;
+  font-size: 36rpx;
+  color: #999;
+  line-height: 36rpx;
+  text-align: center
+}
