--- a/Weitianshi/pages/discoverInvest/discoverInvest.wxml
+++ b/Weitianshi/pages/discoverInvest/discoverInvest.wxml
@@ -14,7 +14,7 @@
   <swiper-item data-current='0'>
     <scroll-view style="height:100%;" scroll-y="true">
       <view class="bigTitle">
-      <image src="/img/img-bg@2x.png" class="bigTitle"></image>
+      <!-- <image src="/img/img-bg@2x.png" class="bigTitle"></image> -->
         <view class="searchSth" bindtap="allSearch">请输入机构名称，成员姓名，投资领域
           <view class="searchImageBox">
             <image src="/img/icon-sousuo@2x.png" class="searchImage"></image>
