--- a/Weitianshi/pages/discoverProject/discoverProject.wxml
+++ b/Weitianshi/pages/discoverProject/discoverProject.wxml
@@ -2,8 +2,9 @@
 <view class="swiper-tab">
   <view class="swiper-tab-list {{currentTab==0 ? 'on' : ''}}" data-current="0" bindtap="swichNav">精选</view>
   <view class="swiper-tab-list {{currentTab==1 ? 'on' : ''}}" data-current="1" bindtap="swichNav">最新</view>
+  <view class="swiper-tab-list {{currentTab==2 ? 'on' : ''}}" data-current="2" bindtap="swichNav">项目库</view>
 </view>
-<!--筛选和搜索  -->
+  <!--筛选和搜索  -->
 <template is='search' data='{{SearchInit}}'></template>
 <template is='searchResult' data='{{SearchInit}}'></template>
 <!--项目展示列表  -->
@@ -46,6 +47,13 @@
     <view wx:if="{{financingNeed==''}}">
       <image class="empty" src="/img/img-wujieguo@3x.png"></image>
     </view>
+  </swiper-item>
+  <!--项目库  -->
+   <swiper-item data-current='2'>
+    <scroll-view scroll-y="true"  style="height:100%;">
+    <image class="xiangmu" src="{{imgUrls1}}"></image>
+    <view class="xiangmu1"></view>
+    </scroll-view>
   </swiper-item>
 </swiper>
 <!--创建项目引导  -->
