--- a/Weitianshi/pages/organization/subPage/list_orgMember/list_orgMember.wxss
+++ b/Weitianshi/pages/organization/subPage/list_orgMember/list_orgMember.wxss
@@ -10,10 +10,12 @@ page {
   height: auto;
   background: #fff;
 }
+
 .hasNothing {
   margin-top: 410rpx;
   font-size: 36rpx;
   color: #999;
-  line-height: 36rpx;
-  text-align: center
+  line-height: 20rpx;
+  text-align: center;
+  height: 800rpx;
 }
