--- a/Weitianshi/pages/discoverInvest/discoverInvest.wxml
+++ b/Weitianshi/pages/discoverInvest/discoverInvest.wxml
@@ -24,12 +24,12 @@
       <!--投资风格  -->
       <view class="outStyleBox">
         <view class="blockTitle">投资风格</view>
-        <view class="blockIntro">*机器人Angel深度挖掘机构投资风格</view>
+        <view class="blockIntro">* 机器人Angel深度挖掘机构投资风格</view>
         <view class="flex investmentListBox">
           <block wx:for="{{investormentList.style_list}}" wx:key="{{index}}">
             <view class="investStyleBlock" data-style="{{item.style_id}}"  bindtap="toStyle">
               <view class="investStyleTitle">{{item.style_name}}</view>
-              <view class="investStyleNum"><label>{{item.investment_num}}</label>个机构</view>
+              <view class="investStyleWord"><label class="investStyleNum">{{item.investment_num}}</label>  个机构</view>
             </view>
           </block>
         </view>
@@ -51,8 +51,8 @@
         <block wx:for="{{investormentList.industry_list.list}}" wx:key="{{index}}">
           <view class="industryContentBlock flex">
             <view class="industryContentTitle">{{item.industry_name}}</view>
-            <view class="industryContent">{{item.invested_num}}</view>
-            <view class="industryContent">{{item.project_num}}</view>
+            <view class="industryContent">{{item.investment_num}}</view>
+            <view class="industryContent">{{item.event_num}}</view>
             <view class="industryContent flex">
               <view>{{item.media_hot}}</view>
               <image src="/img/icon-jiantouxia@2x.png" class="arrow" wx:if="{{item.status == 2}}"></image>
