--- a/Weitianshi/pages/organization/org_search/org_search.wxml
+++ b/Weitianshi/pages/organization/org_search/org_search.wxml
@@ -56,11 +56,11 @@
   </swiper-item>
   <swiper-item data-current='3'>
     <scroll-view style="height:100%;" scroll-y="true" wx:if="{{memberList.length != 0}}"  bindscrolltolower='loadMore' data-current='3'>
-      <view class="outStyleBox" id="memberList">
+      <view class="outStyleBox" id="memberList" wx:if="{{memberList.list.length != 0}}">
         <view class="blockTitle">成员</view>
         <template is="memberList" data="{{memberList}}"></template>
       </view>
-      <view class="hasNothing" wx:if="{{memberList.length==0}}">暂无数据</view>
+      <view class="hasNothing" wx:if="{{memberList.list.length == 0}}">暂无数据</view>
     </scroll-view>
   </swiper-item>
 </swiper>
