--- a/Weitianshi/pages/organization/subPage/list_industry/list_industry.wxml
+++ b/Weitianshi/pages/organization/subPage/list_industry/list_industry.wxml
@@ -14,8 +14,8 @@
     <block wx:for="{{industry_list}}" wx:key="{{index}}">
       <view class="industryContentBlock flex">
         <view class="industryContentTitle">{{item.industry_name}}</view>
-        <view class="industryContent">{{item.invested_num}}</view>
-        <view class="industryContent">{{item.project_num}}</view>
+        <view class="industryContent">{{item.investment_num}}</view>
+        <view class="industryContent">{{item.event_num}}</view>
         <view class="industryContent flex">
           <view>{{item.media_hot}}</view>
           <image src="/img/icon-jiantouxia@2x.png" class="arrow" wx:if="{{item.status == 2}}"></image>
