--- a/Weitianshi/pages/Template/Template.wxml
+++ b/Weitianshi/pages/Template/Template.wxml
@@ -883,16 +883,16 @@
       <view class='flex dropFlex' scroll-y='true'>
         <block wx:for='{{SearchInit.tab}}' wx:key='{{item.label}}'>
           <template wx:if='{{item.type==1}}' is='searchDropItem' data='{{SearchInit,item,label:item.label,itemId:item.itemId,itemName:item.itemName,longCheckBox:item.longCheckBox,index}}'></template>
-          <template wx:if='{{item.type==2}}' is='searchDropItem2' data='{{SearchInit,item,label:item.label,itemId:item.itemId,itemName:item.itemName,longCheckBox:item.longCheckBox,index,page:item.page}}'></template>
-        </block>
-      </view>
-      <!--重置确定  -->
-      <view class='btnGroup flex' wx:if="{{SearchInit.currentIndex!=99}}">
-        <button bindtap='reset'>重置</button>
-        <button bindtap='searchCertain'>确定</button>
-      </view>
-    </view>
-  </view>
+<template wx:if='{{item.type==2}}' is='searchDropItem2' data='{{SearchInit,item,label:item.label,itemId:item.itemId,itemName:item.itemName,longCheckBox:item.longCheckBox,index,page:item.page}}'></template>
+</block>
+</view>
+<!--重置确定  -->
+<view class='btnGroup flex' wx:if="{{SearchInit.currentIndex!=99}}">
+  <button bindtap='reset'>重置</button>
+  <button bindtap='searchCertain'>确定</button>
+</view>
+</view>
+</view>
 </template>
 
 <!--筛选下拉框(单个)  type1-->
@@ -940,11 +940,11 @@
       <view class='flex'>
         <block wx:for='{{SearchInit.tab}}' wx:key='{{item.itemId}}'>
           <template is='searchResult_single' data='{{SearchInit,type:item.label,typeName:item.itemName,typeId:item.itemId,page:item.page}}'></template>
-        </block>
-      </view>
-    </scroll-view>
-    <view class='allReset' bindtap='allReset'>清空</view>
-  </view>
+</block>
+</view>
+</scroll-view>
+<view class='allReset' bindtap='allReset'>清空</view>
+</view>
 </template>
 
 <!--筛选结果展示横列(单个)  -->
@@ -1217,8 +1217,13 @@
           <label class="tapCase">标签</label>
           <view class="mainCaseContent">
             <block wx:for="{{item.style_list}}" wx:key="{{index}}" wx:for-item="styleList">
-              <label wx:if="{{index <  item.style_list.length-1}}">{{styleList.style_name}}、</label>
-              <label wx:if="{{index == item.style_list.length-1}}">{{styleList.style_name}}</label>
+            <label >{{styleList.style_name}}、</label> 
+              <!-- <label wx:if="{{index <  item.style_list.length-1}}">{{styleList.style_name}}、</label> -->
+              <!-- <label wx:if="{{index == item.style_list.length-1}}">{{styleList.style_name}}</label> -->
+            </block>
+             <block wx:for="{{item.type_list}}" wx:key="{{index}}" wx:for-item="typeList">
+              <label wx:if="{{index <  item.type_list.length-1}}">{{typeList.type_name}}、</label>
+              <label wx:if="{{index == item.type_list.length-1}}">{{typeList.type_name}}</label>
             </block>
           </view>
         </view>
@@ -1227,6 +1232,7 @@
             <label wx:if="{{index < item.investment_events.length-1}}">{{investment_eventsList.event_time}}【{{investment_eventsList.project_name}}】、</label>
             <label wx:if="{{index == item.investment_events.length-1}}">{{investment_eventsList.event_time}}【{{investment_eventsList.project_name}}】</label>
           </block>
+          
         </view>
       </view>
     </view>
@@ -1254,7 +1260,7 @@
 <!--机构成员  -->
 <template name="memberList">
   <block wx:for="{{memberList.list}}" wx:key="{{index}}">
-    <view class="memberInfo flex" data-memberid="{{item.member_id}}" hidden="{{currentTab == 0 && index >= 6}}" bindtap="findMember" style="{{index == 5 && currentTab == 0 ? 'border:none':''}}">
+    <view class="memberInfo flex" data-memberid="{{item.investment_id}}" hidden="{{currentTab == 0 && index >= 6}}" bindtap="findMember" style="{{index == 5 && currentTab == 0 ? 'border:none':''}}">
       <view class="memberInfoLeft">
         <image src="{{item.member_avatar_url}}" wx:if="{{item.member_avatar_url}}" class="memberInfoLeft"></image>
         <view class="memberInfoLeft" wx:if="{{item.member_avatar_text}}">{{item.member_avatar_text}}</view>
