--- a/Weitianshi/pages/organization/subPage/list_industry/list_industry.wxss
+++ b/Weitianshi/pages/organization/subPage/list_industry/list_industry.wxss
@@ -2,15 +2,16 @@
 
 .page {
   background: #fff;
-  height:100%;
+  height: 100%;
 }
-.scrollStyle{
-  height:1334rpx;
-    background: #fff;
-}
-.outStyleBox {
-height: 1334rpx;
 
+.scrollStyle {
+  height: 1334rpx;
+  background: #fff;
+}
+
+.outStyleBox {
+  height: 1334rpx;
   padding: 32rpx;
 }
 
@@ -40,6 +41,7 @@ height: 1334rpx;
 .industryTitle {
   margin-right: 40rpx;
   margin-bottom: 32rpx;
+  white-space: nowrap;
 }
 
 .industryTitle:first-child {
@@ -102,6 +104,6 @@ height: 1334rpx;
 .arrow {
   width: 12rpx;
   height: 6rpx;
-  padding-top : 12rpx;
-  margin:0 4rpx 0 12rpx
+  padding-top: 12rpx;
+  margin: 0 4rpx 0 12rpx;
 }
