--- a/Weitianshi/pages/organization/org_detail/org_detail.wxml
+++ b/Weitianshi/pages/organization/org_detail/org_detail.wxml
@@ -2,7 +2,7 @@
 <import src="/pages/Template/Template.wxml" />
 <scroll-view style='heigt:3000rpx;' scroll-y='true'>
   <!--投资机构类型，标签  -->
-  <view class="media1">
+  <view class="media11">
     <view class="inMedia">
       <view class="detailIntroduce flex">
         <view class="detailLogo">
@@ -14,13 +14,13 @@
         <view class="detailName">{{info.investment_name}}</view>
       </view>
       <view class="mediaLine" wx:if="{{info.type_list.length!=0||info.style_list.length!=0}}"></view>
-      <view class="detailType">
+      <view class="detailType11">
         <block wx:for="{{info.type_list}}" wx:key="{{item}}">
           <view class="detailType1 detailColor detailRight">{{item.type_name}}</view>
         </block>
       </view>
 
-      <view class="detailType">
+      <view class="detailType11">
         <block wx:for="{{info.style_list}}" wx:key="{{item}}">
           <view class="detailType1 detailColor1 detailRight">{{item.style_name}}</view>
         </block>
@@ -28,12 +28,12 @@
     </view>
   </view>
   <!--投资策略  -->
-  <view class="media1" wx:if="{{info.investment_strategy}}">
+  <view class="media1" wx:if="{{info.industry_map}}">
     <view class="inMedia investBottom">
       <view class="investStrategy">投资策略</view>
       <view class="investStrategy1">* 根据机构近期投资事件刻画投资图谱</view>
       <view class="investImg">
-        <image src="{{info.investment_strategy}}"></image>
+        <image src="{{info.industry_map}}"></image>
       </view>
     </view>
   </view>
@@ -67,7 +67,7 @@
   <view class="media1" wx:if="{{info.industry_list.length!=0}}">
     <view class="inMedia investBottom">
       <view class="industry investBottom">投资领域</view>
-      <view class="detailType">
+      <view class="{{aisChecked3?'detailType':'detailTypeAfter'}}">
         <block wx:for="{{info.industry_list}}" wx:key="{{item}}">
           <!-- <view class="detailType1 detailColor detailRight">{{item.industry_name}}</view> -->
           <template is='industry' data='{{item}}'></template>
@@ -79,19 +79,25 @@
         <view class="detailType1 detailColor detailRight">机构类型</view>
         <view class="detailType1 detailColor detailRight">类型</view> -->
       </view>
+      <label class="more" bindtap="allBrightPoint" wx:if="{{aisChecked3 == true && textBeyond3==true}}" data-check="{{3}}">展开</label>
+      <label class="more" bindtap="noBrightPoint" wx:if="{{aisChecked3== false && textBeyond3==true}}" data-check="{{3}}">收起</label>
     </view>
   </view>
   <!--投资轮次  -->
   <view class="media1" wx:if="{{info.stage_list.length!=0}}">
-    <view class="inMedia investBottom">
+    <view class="inMedia ">
       <view class="industry investBottom">投资轮次</view>
-      <view class="detailType">
-        <view class="detailType">
-          <block wx:for="{{info.stage_list}}" wx:key="{{item}}">
-            <view class="detailType1 detailColor1 detailRight">{{item.stage_name}}</view>
-          </block>
-        </view>
+
+
+      <view class="{{aisChecked4?'detailType':'detailTypeAfter'}}">
+        <block wx:for="{{info.stage_list}}" wx:key="{{item}}">
+          <view class="detailType1 detailColor1 detailRight">{{item.stage_name}}</view>
+        </block>
       </view>
+      <label class="more" bindtap="allBrightPoint" wx:if="{{aisChecked4 == true && textBeyond4==true}}" data-check="{{4}}">展开</label>
+      <label class="more" bindtap="noBrightPoint" wx:if="{{aisChecked4== false && textBeyond4==true}}" data-check="{{4}}">收起</label>
+
+
     </view>
   </view>
   <!--基金管理方  -->
