--- a/Weitianshi/pages/organization/org_detail/org_detail.wxss
+++ b/Weitianshi/pages/organization/org_detail/org_detail.wxss
@@ -5,8 +5,17 @@ page {
   /* overflow: hidden; */
 }
 
-.media1 {
+.media11 {
   width: 92%;
+  margin: 0 auto;
+  height: auto;
+  background: #fff;
+  margin-top: 37.44rpx;
+  /* box-shadow: 0 2px 4px 0 rgba(64, 88, 122, 0.10); */
+}
+
+.media1 {
+  width: 100%;
   margin: 0 auto;
   height: auto;
   background: #fff;
@@ -19,12 +28,12 @@ page {
   padding-top: 42rpx;
   padding-left: 32rpx;
   padding-right: 32rpx;
-  border-radius: 4rpx;
+  border-radius: 2px;
 }
 
 .mediaLine {
   margin-top: 20rpx;
-  border-bottom: 1rpx solid #e6e6e6;
+  border-bottom: 0.5px solid #e6e6e6;
   margin-bottom: 35rpx;
 }
 
@@ -47,7 +56,7 @@ page {
 .detailLogo1 {
   width: 154.44rpx;
   height: 154.44rpx;
-   margin-bottom: 25rpx; 
+  margin-bottom: 25rpx;
   /* background: red; */
 }
 
@@ -57,6 +66,21 @@ page {
 }
 
 .detailType {
+  font-size: 14px;
+  color: #666;
+  letter-spacing: 0;
+  height: 160rpx;
+  overflow: hidden;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
+
+.detailTypeAfter {
+  font-size: 14px;
+  color: #666;
+  letter-spacing: 0;
+  line-height: 56rpx;
+  height: auto;
 }
 
 .detailType1 {
@@ -111,9 +135,11 @@ page {
 .investBottom {
   padding-bottom: 40rpx;
 }
-.investBottom1{
+
+.investBottom1 {
   padding-bottom: 32rpx;
 }
+
 .investIntroduce {
   font-size: 14px;
   color: #666;
