--- a/Weitianshi/utils/wxss/organization.wxss
+++ b/Weitianshi/utils/wxss/organization.wxss
@@ -91,7 +91,7 @@
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   margin-bottom: 24rpx;
-  width: 105%;
+  width: 102%;
 }
 
 #invest .investInduryone {
@@ -519,6 +519,8 @@
   height: 104rpx;
   border-radius: 100%;
   margin-right: 24rpx;
+  text-align: center;
+  line-height:100rpx;
 }
 
 #memberList1 .memberInfoTop {
